tesimonials layout spacing and grid template fixed

--- a/src/styles/layout/testimonials.pcss
+++ b/src/styles/layout/testimonials.pcss
@@ -3,16 +3,15 @@
   background-repeat: no-repeat;
   background-size: 2rem;
   background-position: 2% 2%;
-  margin: 8.5rem 0;
+  margin: 8.5rem auto;
   padding: 2rem 0;
-  max-width: 41.25rem;
-  margin: 0 auto;
   @mixin screen-size-md {
     background-size: 2.75rem;
     background-position: 2% 1%;
   }
 
   @mixin screen-size-lg {
+    margin: 9.5rem auto;
     background-size: 3.5rem;
     max-width: unset;
     background-position: 2% 0%;
@@ -33,7 +32,10 @@
     }
 
     > *:last-child {
-      grid-column: 1 / 3;
+      
+      @mixin screen-size-md {
+        grid-column: 1 / 3;
+      }
       @mixin screen-size-lg {
         grid-column: unset;
       }
